[gd_scene load_steps=8 format=2]

[ext_resource path="res://imagenes/ecenarios/gameover.png" type="Texture" id=1]
[ext_resource path="res://gameover.gd" type="Script" id=2]
[ext_resource path="res://fuentes/Retro Gaming.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sonidos/21 - Game Over.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="gameover" type="Control"]
margin_left = -8.55685
margin_top = 4.48412
margin_right = 627.443
margin_bottom = 355.484
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.18915
margin_top = -9.94604
margin_right = 12.1893
margin_bottom = -0.945923
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameover" type="Sprite" parent="."]
position = Vector2( 326.712, 144.641 )
scale = Vector2( 1.52588, 1.13635 )
texture = ExtResource( 1 )

[node name="gameovermusic" type="AudioStreamPlayer" parent="gameover"]
stream = ExtResource( 4 )
autoplay = true

[node name="reintentar" type="Button" parent="."]
margin_left = 88.2425
margin_top = 238.703
margin_right = 205.242
margin_bottom = 289.703
custom_fonts/font = SubResource( 1 )
text = "reintentar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="salir" type="Button" parent="."]
margin_left = 453.221
margin_top = 238.892
margin_right = 565.221
margin_bottom = 289.892
custom_fonts/font = SubResource( 2 )
text = "salir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seleccionNivel" type="Button" parent="."]
margin_left = 239.943
margin_top = 239.703
margin_right = 422.943
margin_bottom = 289.703
custom_fonts/font = SubResource( 3 )
text = "Seleccionar nivel"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="reintentar" to="." method="_on_reintentar_pressed"]
[connection signal="pressed" from="salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="seleccionNivel" to="." method="_on_seleccionNivel_pressed"]
